# jetson-tx2-rover

lidar-xv11/: CMakeLists.txt  package.xml
lidar-xv11/launch/: lidar-xv11.launch
lidar-xv11/scripts/: gpio388_init.service  motor.sh  xv11-bringup.py
rover/: CMakeLists.txt  package.xml
rover/launch/: apm.launch  rover.launch
