<?xml version="1.0"?>
<package format="2">
  <name>lidar-xv11</name>
  <version>1.0.0</version>
  <description>Package for managing Neato XV-11 lidar</description>

  <maintainer email="goldartt@gmail.com">Arthur Golubtsov</maintainer>
  <author email="goldartt@gmail.com">Arthur Golubtsov</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>xv_11_laser_driver</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>