<?xml version="1.0"?>
<package format="2">
  <name>rover</name>
  <version>1.0.0</version>
  <description>Common ROS rover package</description>

  <maintainer email="goldartt@gmail.com">Arthur Golubtsov</maintainer>
  <author email="goldartt@gmail.com">Arthur Golubtsov</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>xv_11_laser_driver</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>